--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,4 +8,5 @@
     <string name="result_repartition">"\n\n---\nRepartition:\n"</string>
     <string name="result_give_suffix">" (donner)"</string>
     <string name="result_take_suffix">" (avoir)"</string>
+    <string name="result_division_margin_error">"\nmarge d'erreur pour la division: %s"</string>
 </resources>
