--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="result_repartition">"\n\n---\nRepartition:\n"</string>
     <string name="result_give_suffix">" (give)"</string>
     <string name="result_take_suffix">" (take)"</string>
+    <string name="result_division_margin_error">"\ndivision's margin of error: %s"</string>
 </resources>
