--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,9 +4,6 @@
     <string name="divide">"Diviser"</string>
     <string name="result_total">"Total: %s"</string>
     <string name="result_total_amount_person">"\nMontant total par personne: %s"</string>
-    <string name="result_details">"\n\n---\nDétail:\n"</string>
-    <string name="result_repartition">"\n\n---\nRepartition:\n"</string>
-    <string name="result_give_suffix">" (donner)"</string>
-    <string name="result_take_suffix">" (avoir)"</string>
-    <string name="result_division_margin_error">"\nmarge d'erreur pour la division: %s"</string>
+    <string name="result_repartition">"Repartition:"</string>
+    <string name="result_owes">"doit à"</string>
 </resources>
