--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,6 @@
     <string name="divide">"Divide"</string>
     <string name="result_total">"Total: %s"</string>
     <string name="result_total_amount_person">"\nTotal amount per person: %s"</string>
-    <string name="result_details">"\n\n---\nDetail:\n"</string>
-    <string name="result_repartition">"\n\n---\nRepartition:\n"</string>
-    <string name="result_give_suffix">" (give)"</string>
-    <string name="result_take_suffix">" (take)"</string>
-    <string name="result_division_margin_error">"\ndivision's margin of error: %s"</string>
+    <string name="result_repartition">"Repartition:"</string>
+    <string name="result_owes">"owes"</string>
 </resources>
