--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="put_your_data">"<i>Put your resume!</i>\n$amount $person $description_optional"</string>
     <string name="divide">"Divide"</string>
     <string name="result_total">"Total: %s"</string>
-    <string name="result_total_amount_person">"\nTotal amount per person: %s"</string>
+    <string name="result_total_per_person">"Total expense per person:"</string>
+    <string name="result_amount_per_person">"Situation per person:"</string>
     <string name="result_repartition">"Repartition:"</string>
+    <string name="result_give_suffix">"(pays back)"</string>
+    <string name="result_take_suffix">"(gets back)"</string>
     <string name="result_owes">"owes"</string>
 </resources>
