--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">"Traffico Illecito"</string>
     <string name="put_your_data">"<i>Incolla i conti!</i>\n$importo $persona $descrizione_opzionale"</string>
     <string name="divide">"Dividi"</string>
+    <string name="result">"Risultato"</string>
     <string name="result_total">"Totale speso: %s"</string>
     <string name="result_total_per_person">"Spesa totale per persona:"</string>
     <string name="result_amount_per_person">"Situazione per persona:"</string>
