--- a/presentation/src/main/res/values-it/strings.xml
+++ b/presentation/src/main/res/values-it/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">"Traffico Illecito"</string>
     <string name="put_your_data">"<i>Incolla i conti!</i>\n$importo $persona $descrizione_opzionale"</string>
+    <string name="home_input_hint">"qui le spese…"</string>
     <string name="divide">"Dividi"</string>
     <string name="result">"Risultato"</string>
     <string name="detail">"Dettaglio"</string>
