UI restyle (adding HelpBottomDialogFragment)

--- a/presentation/src/main/res/values-fr/strings.xml
+++ b/presentation/src/main/res/values-fr/strings.xml
@@ -3,7 +3,8 @@
     <string name="error_view_retry">"Réessayez"</string>
     <string name="error_generic">"Une erreur est survenue"</string>
     <string name="error_parsing">"Impossible d'analyser cette entrée (à la ligne %s)"</string>
-    <string name="put_your_data">"<i>Mettez vos dépenses!</i>\n$montant $prenom description_optionnelle"</string>
+    <string name="put_your_data">"<i>Mettez vos dépenses!</i>"</string>
+    <string name="put_your_data_hint">"$montant $prenom description_optionnelle"</string>
     <string name="home_input_hint">"dépens ici…"</string>
     <string name="divide">"Diviser"</string>
     <string name="result">"Résultat"</string>
