Creating Help elements

--- a/presentation/src/main/res/values-fr/strings.xml
+++ b/presentation/src/main/res/values-fr/strings.xml
@@ -4,7 +4,19 @@
     <string name="error_generic">"Une erreur est survenue"</string>
     <string name="error_parsing">"Impossible d'analyser cette entrée (à la ligne %s)"</string>
     <string name="put_your_data">"<i>Mettez vos dépenses!</i>"</string>
-    <string name="put_your_data_hint">"$montant $prenom description_optionnelle"</string>
+    <string name="help_title"><i>Divisez les dépenses engagées par plus d\'une personne!</i></string>
+    <string name="help_example1_line1"><b>Exemple 1:</b></string>
+    <string name="help_example1_line2">6.20 Thomas birra</string>
+    <string name="help_example1_line3">$montant $payant $description_facultative</string>
+    <string name="help_example2_line1"><b>Exemple 2:</b></string>
+    <string name="help_example2_line2">3.60 🐷 gelato per tutti (🐷, 🐗, 🐻)</string>
+    <string name="help_example2_line3">$montant $payant $description_facultative ($participant1, $participant2, …)</string>
+    <string name="help_example2_line4"><i>Dans cet exemple, le payeur peut ou non apparaître dans la liste des participants !</i></string>
+    <string name="help_attention_line1"><b>ATTENTION: le nom d\'une personne est composé d\'un seul mot !</b></string>
+    <string name="help_attention_line2"><b>Noms acceptés</b></string>
+    <string name="help_attention_line3">Luke, 🎮, ✌😉, M1ch3l3</string>
+    <string name="help_attention_line4"><b>Noms rejetés</b></string>
+    <string name="help_attention_line5"><strike>Donald Trump</strike>, <strike>🤪 🤳</strike>, <strike>Test 123</strike></string>
     <string name="home_input_hint">"dépens ici…"</string>
     <string name="divide">"Diviser"</string>
     <string name="result">"Résultat"</string>
