--- a/presentation/src/main/res/values-it/strings.xml
+++ b/presentation/src/main/res/values-it/strings.xml
@@ -4,7 +4,19 @@
     <string name="error_generic">"È avvenuto un errore"</string>
     <string name="error_parsing">"Impossibile analizzare questo input (alla riga %s)"</string>
     <string name="put_your_data">"<i>Incolla le spese!</i>"</string>
-    <string name="put_your_data_hint">"$importo $persona $descrizione_opzionale"</string>
+    <string name="help_title"><i>Dividi le spese sostenute da più di una persona!</i></string>
+    <string name="help_example1_line1"><b>Esempio 1:</b></string>
+    <string name="help_example1_line2">6.20 Giovanni birra</string>
+    <string name="help_example1_line3">$importo $pagante $descrizione_opzionale</string>
+    <string name="help_example2_line1"><b>Esempio 2:</b></string>
+    <string name="help_example2_line2">3.60 🐷 gelato per tutti (🐷, 🐗, 🐻)</string>
+    <string name="help_example2_line3">$importo $pagante $descrizione_opzionale ($partecipante1, $partecipante2, …)</string>
+    <string name="help_example2_line4"><i>In questo esempio il pagante potrebbe o meno apparire nell\'elenco dei partecipanti!</i></string>
+    <string name="help_attention_line1"><b>ATTENZIONE: il nome di una persona è composto da UNA SOLA parola!</b></string>
+    <string name="help_attention_line2"><b>Nomi accettati</b></string>
+    <string name="help_attention_line3">Luke, 🎮, ✌😉, M1ch3l3</string>
+    <string name="help_attention_line4"><b>Nomi rigettati</b></string>
+    <string name="help_attention_line5"><strike>Donald Trump</strike>, <strike>🤪 🤳</strike>, <strike>Test 123</strike></string>
     <string name="home_input_hint">"qui le spese…"</string>
     <string name="divide">"Dividi"</string>
     <string name="result">"Risultato"</string>
